--- a/style/style.css
+++ b/style/style.css
@@ -196,4 +196,20 @@ body{
     .car_a{
         border-radius: 50px;
     }
+    .map{
+        width: 500px;
+        height: 350px;
+    }
+}
+@media(max-width:500px){
+    :root{
+        --h1_size:40px;
+    }
+    .map{
+        width: 300px;
+        height: 200px;
+    }
+    .main_img_container{
+        height: 40vh;
+    }
 }
