--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,10 @@ a{
     text-decoration: none;
     color: black;
 }
+.map{
+    width: 800px;
+    height: 600px;
+}
 body{
     padding: 0;
     margin: 0;
